@@ -7,7 +7,7 @@ Parts of the package are under other, compatible licenses:
 
 akfavatar.xpm, akfavatar.ico, btn.xpm, btn_no.xbm, btn_yes.xbm,
 btn_right.xbm, btn_left.xbm, btn_up.xbm, btn_down.xbm, btn_cancel.xbm,
-balloonpointer.xbm, circle.xbm, info.xpm,
+btn_ff.xbm, btn_fb.xbm, balloonpointer.xbm, circle.xbm, info.xpm,
 bell.flac, bell.au, positive.au, neutral.au, negative.au:
 These files are put in the Public Domain - Andreas K. Foerster
 
