@@ -1,0 +1,14 @@
+#define btn_fastbackward_width 32
+#define btn_fastbackward_height 32
+static unsigned char btn_fastbackward_bits[] = {
+   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+   0x00, 0x00, 0x00, 0x00, 0x00, 0x40, 0x00, 0x01, 0x00, 0x60, 0x80, 0x01,
+   0x00, 0x70, 0xc0, 0x01, 0x00, 0x78, 0xe0, 0x01, 0x00, 0x7c, 0xf0, 0x01,
+   0x00, 0x7e, 0xf8, 0x01, 0x00, 0x7f, 0xfc, 0x01, 0x80, 0x7f, 0xfe, 0x01,
+   0xc0, 0x7f, 0xff, 0x01, 0xe0, 0xff, 0xff, 0x01, 0xc0, 0x7f, 0xff, 0x01,
+   0x80, 0x7f, 0xfe, 0x01, 0x00, 0x7f, 0xfc, 0x01, 0x00, 0x7e, 0xf8, 0x01,
+   0x00, 0x7c, 0xf0, 0x01, 0x00, 0x78, 0xe0, 0x01, 0x00, 0x70, 0xc0, 0x01,
+   0x00, 0x60, 0x80, 0x01, 0x00, 0x40, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00,
+   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 };
