@@ -1,0 +1,14 @@
+#define btn_fastforward_width 32
+#define btn_fastforward_height 32
+static unsigned char btn_fastforward_bits[] = {
+   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+   0x00, 0x00, 0x00, 0x00, 0x80, 0x00, 0x02, 0x00, 0x80, 0x01, 0x06, 0x00,
+   0x80, 0x03, 0x0e, 0x00, 0x80, 0x07, 0x1e, 0x00, 0x80, 0x0f, 0x3e, 0x00,
+   0x80, 0x1f, 0x7e, 0x00, 0x80, 0x3f, 0xfe, 0x00, 0x80, 0x7f, 0xfe, 0x01,
+   0x80, 0xff, 0xfe, 0x03, 0x80, 0xff, 0xff, 0x07, 0x80, 0xff, 0xfe, 0x03,
+   0x80, 0x7f, 0xfe, 0x01, 0x80, 0x3f, 0xfe, 0x00, 0x80, 0x1f, 0x7e, 0x00,
+   0x80, 0x0f, 0x3e, 0x00, 0x80, 0x07, 0x1e, 0x00, 0x80, 0x03, 0x0e, 0x00,
+   0x80, 0x01, 0x06, 0x00, 0x80, 0x00, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00,
+   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 };
